--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "lto-api": "^0.5.8",
+    "ng-suspense": "0.0.7",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
   },
