--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "hammerjs": "^2.0.8",
     "lto-api": "^0.5.8",
     "ng-suspense": "0.0.7",
+    "ngx-infinite-scroll": "^7.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
   },
