--- a/package.json
+++ b/package.json
@@ -53,32 +53,34 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.2",
     "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
-    "@angular-devkit/build-angular": "~0.11.2",
     "@ngrx/store-devtools": "6.1.2",
-    "ngrx-store-freeze": "0.2.4",
+    "@nrwl/builders": "7.5.2",
     "@nrwl/schematics": "7.5.2",
-    "jasmine-marbles": "0.4.0",
+    "@types/faker": "^4.1.5",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "3.3.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "cypress": "^3.1.0",
+    "faker": "^4.1.0",
     "jasmine-core": "~2.99.1",
+    "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngrx-store-freeze": "0.2.4",
+    "prettier": "1.15.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-    "prettier": "1.15.2",
-    "cypress": "^3.1.0",
-    "@types/jquery": "3.3.6",
-    "@nrwl/builders": "7.5.2"
+    "typescript": "~3.2.2"
   }
 }
