--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "update:check": "ng update",
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help"
+    "help": "./node_modules/.bin/nx help",
+    "build:explorer:testnet": "ng build explorer --configuration testnet --stats-json",
+    "build:explorer:mainnet": "ng build explorer --configuration mainnet --stats-json",
+    "explorer:bundle-report": "webpack-bundle-analyzer dist/apps/explorer/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -81,6 +84,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "webpack-bundle-analyzer": "^3.0.4"
   }
 }
