--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "baseUrl": ".",
     "paths": {
       "@lto/core": ["libs/core/src/index.ts"],
-      "@lto/core/testing/*": ["lib/core/testing/*"],
+      "@lto/core/testing/*": ["libs/core/src/testing/*"],
+      "@lto/core/testing": ["libs/core/src/testing"],
       "@lto/common": ["libs/common/src/index.ts"]
     }
   },
