--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ngrx/router-store": "6.1.2",
     "@ngrx/store": "6.1.2",
     "@nrwl/nx": "7.5.2",
+    "@swimlane/ngx-charts": "^10.1.0",
     "buffer": "^5.2.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
